first deploy version

--- a/.settings/com.google.cloud.tools.eclipse.appengine.deploy.prefs
+++ b/.settings/com.google.cloud.tools.eclipse.appengine.deploy.prefs
@@ -2,7 +2,7 @@ account.email=rklemke@gmail.com
 eclipse.preferences.version=1
 include.optional.configuration.files=true
 project.bucket=
-project.id=stimulatedplanning
+project.id=senseofcommunity-225200
 project.previousVersion.stop=true
 project.promote=true
 project.version=
