graphical changes in chat page

--- a/.settings/com.google.cloud.tools.eclipse.appengine.deploy.prefs
+++ b/.settings/com.google.cloud.tools.eclipse.appengine.deploy.prefs
@@ -1,4 +1,4 @@
-account.email=rklemke@gmail.com
+account.email=bibeglimbu@gmail.com
 eclipse.preferences.version=1
 include.optional.configuration.files=true
 project.bucket=
