fixed refactoring issues

--- a/.settings/com.google.cloud.tools.eclipse.appengine.deploy.prefs
+++ b/.settings/com.google.cloud.tools.eclipse.appengine.deploy.prefs
@@ -1,6 +1,7 @@
-account.email=rklemke@gmail.com
+account.email=bibeglimbu@gmail.com
 eclipse.preferences.version=1
 include.optional.configuration.files=true
+project.allowObsoleteRuntime=false
 project.bucket=
 project.id=senseofcommunity-225200
 project.previousVersion.stop=true
